# APIS

./: .envrc  .gitignore  Dockerfile  flake.nix  manage.py  pyproject.toml  requirements.txt  sqltest.py
.github/workflows/: django.yml
fm_eventmanager/: asgi.py  settings.py.docker  settings.py.travis  urls.py
registration/: admin.py  models.py  payments.py  printing.py  pushy.py  urls.py
registration/management/commands/: cron_metrics.py
registration/migrations/: 0004_auto_20160729_0021.py  0034_auto_20161227_1230.py  0103_auto_20241109_1543.py
registration/templates/furpocalypse/2024/registration/: printing.html
registration/templatetags/: registration_tags.py
registration/tests/: test_admin.py  test_admin_firebase.py  test_dealers.py  test_index.py  test_model.py  test_onsite.py  test_registration_printing.py  test_staff.py
registration/views/: cart.py  common.py  dealers.py  onsite.py  onsite_admin.py  ordering.py  printing.py  staff.py  upgrade.py  webhooks.py
