[tool.poetry]
name = "apis"
version = "0.1.0"
description = "Event Management System for Fan Conventions"
authors = ["Anadon <joshua.r.marshall.1991@gmail.com>"]
license = "GPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
configobj = "5.0.8"
django = ">=3.2.24,<4"
django-admin-env-notice = ">=0.4,<1.0"
django-debug-toolbar = ">=4.3.0,<4.4.0"
django-extensions = ">=3.2.3,<3.3.0"
django-idempotency-key = ">=1.3.0,<1.4.0"
django-import-export = ">=3.3.7,<3.4.0"
django-maintenance-mode = "0.21.1"
django-nested-inline = ">=0.4.6,<0.5.0"
django-prometheus = ">=2.3.1,<2.4.0"
django-redis = ">=5.4.0,<5.5.0"
django-u2f = {git = "https://github.com/rechner/django-u2f.git", rev = "23022f8"}
django-widget-tweaks = "1.5.0"
freezegun = "1.4.0"
influxdb = ">=5.3.1,<5.4.0"
influxdb-client = ">=1.40.0,<1.41.0"
MarkupPy = ">=1.14"
paho-mqtt = "==1.6.1"
pillow = ">=5.3"
psycopg2-binary = "2.9.9"
pyjwt = ">=2.8.0,<2.9.0"
sentry-sdk = "2.3.1"
squareup = "==22.0.0.20220921"
qrcode = ">=7.4.2,<7.5.0"
pytz = ">=2024.1,<2025.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
