[tool.poetry]
name = "apis"
version = "0.1.0"
description = "Event Management System for Fan Conventions"
authors = ["Furthermore (To be filled out), Anadon <joshua.r.marshall.1991@gmail.com>"]
license = "GPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
configobj = ">=5.0.8"
django = ">=5.0.0,<6"
django-admin-env-notice = ">=0.4"
django-debug-toolbar = ">=4.3.0"
django-extensions = ">=3.2.3"
django-idempotency-key = ">=1.3.0"
django-import-export = ">=3.3.7"
django-maintenance-mode = ">=0.21.1"
django-nested-inline = ">=0.4.6"
django-prometheus = ">=2.3.1"
django-redis = ">=5.4.0,<5.5.0"
django-u2f = "==1.0.1"
django-widget-tweaks = ">=1.5.0"
freezegun = ">=1.4.0"
influxdb = ">=5.3.1,<5.4.0"
influxdb-client = ">=1.40.0,<1.41.0"
MarkupPy = ">=1.14"
# paho-mqtt = ">=1.6.1"
pillow = ">=5.3"
psycopg2-binary = ">=2.9.9"
pyjwt = ">=2.8.0,<2.9.0"
sentry-sdk = ">=2.3.1"
squareup = "==22.0.0.20220921"
qrcode = ">=7.4.2,<7.5.0"
pytz = ">=2024.1,<2025.0"
django-mathfilters = "^1.0.0"
werkzeug = "^3.0.3"
pygments = "^2.18.0"
gotenberg-client = "^0.8.0"
paho-mqtt = "^2.1.0"
psycopg = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
